src/main/scala/compiler/generated/GramatikaParser.java
// Generated from Gramatika.g4 by ANTLR 4.7
package compiler.generated;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GramatikaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, COMMENT=3, WS=4, RETURN=5, NUM=6, FLOAT=7, TRUE=8, FALSE=9, 
		IF=10, ELSE=11, NOT=12, BIT_AND=13, BIT_OR=14, BIT_XOR=15, EQ=16, NE=17, 
		LT=18, GT=19, LE=20, GE=21, FOR=22, DO=23, VAR=24, DEF=25, ARROW=26, LEFT_ARROW=27, 
		TO=28, BY=29, INT_TYPE=30, BOOL_TYPE=31, CHAR_TYPE=32, STRING_TYPE=33, 
		UNIT_TYPE=34, FLOAT_TYPE=35, TYPE_ASSING=36, DELIM=37, ID=38, ASSIGN=39, 
		END_C=40, ADD=41, SUB=42, MUL=43, DIV=44, POW=45, LEFT=46, RIGHT=47, NEWLINE=48, 
		LEFT_BR=49, RIGHT_BR=50, AND=51, OR=52, CHAR=53, STRING=54;
	public static final int
		RULE_init = 0, RULE_value_declaration = 1, RULE_value_type = 2, RULE_array_sufix = 3, 
		RULE_func_declaration = 4, RULE_param_list = 5, RULE_param_group = 6, 
		RULE_block = 7, RULE_stat = 8, RULE_if_statement = 9, RULE_for_range_list = 10, 
		RULE_for_range = 11, RULE_func_call = 12, RULE_bool_literal = 13, RULE_string_literal = 14, 
		RULE_char_literal = 15, RULE_expr = 16, RULE_array_id = 17;
	public static final String[] ruleNames = {
		"init", "value_declaration", "value_type", "array_sufix", "func_declaration", 
		"param_list", "param_group", "block", "stat", "if_statement", "for_range_list", 
		"for_range", "func_call", "bool_literal", "string_literal", "char_literal", 
		"expr", "array_id"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'['", "']'", null, null, "'return'", null, null, "'true'", "'false'", 
		"'if'", "'else'", "'!'", "'&'", "'|'", null, "'=='", "'!='", "'<'", "'>'", 
		"'<='", "'>='", "'for'", "'do'", "'var'", "'def'", "'->'", "'<-'", "'to'", 
		"'by'", "'Int'", "'Bool'", "'Char'", "'String'", "'Unit'", "'Float'", 
		"':'", "','", null, "'='", "';'", "'+'", "'-'", "'*'", "'/'", null, "'('", 
		"')'", null, "'{'", "'}'", "'&&'", "'||'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, "COMMENT", "WS", "RETURN", "NUM", "FLOAT", "TRUE", "FALSE", 
		"IF", "ELSE", "NOT", "BIT_AND", "BIT_OR", "BIT_XOR", "EQ", "NE", "LT", 
		"GT", "LE", "GE", "FOR", "DO", "VAR", "DEF", "ARROW", "LEFT_ARROW", "TO", 
		"BY", "INT_TYPE", "BOOL_TYPE", "CHAR_TYPE", "STRING_TYPE", "UNIT_TYPE", 
		"FLOAT_TYPE", "TYPE_ASSING", "DELIM", "ID", "ASSIGN", "END_C", "ADD", 
		"SUB", "MUL", "DIV", "POW", "LEFT", "RIGHT", "NEWLINE", "LEFT_BR", "RIGHT_BR", 
		"AND", "OR", "CHAR", "STRING"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Gramatika.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GramatikaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class InitContext extends ParserRuleContext {
		public InitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init; }
	 
		public InitContext() { }
		public void copyFrom(InitContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FunctionDefsContext extends InitContext {
		public Func_declarationContext fs;
		public TerminalNode EOF() { return getToken(GramatikaParser.EOF, 0); }
		public List<Func_declarationContext> func_declaration() {
			return getRuleContexts(Func_declarationContext.class);
		}
		public Func_declarationContext func_declaration(int i) {
			return getRuleContext(Func_declarationContext.class,i);
		}
		public FunctionDefsContext(InitContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramatikaListener ) ((GramatikaListener)listener).enterFunctionDefs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramatikaListener ) ((GramatikaListener)listener).exitFunctionDefs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramatikaVisitor ) return ((GramatikaVisitor<? extends T>)visitor).visitFunctionDefs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InitContext init() throws RecognitionException {
		InitContext _localctx = new InitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_init);
		int _la;
		try {
			_localctx = new FunctionDefsContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(39);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DEF) {
				{
				{
				setState(36);
				((FunctionDefsContext)_localctx).fs = func_declaration();
				}
				}
				setState(41);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(42);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Value_declarationContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(GramatikaParser.VAR, 0); }
		public TerminalNode ID() { return getToken(GramatikaParser.ID, 0); }
		public TerminalNode TYPE_ASSING() { return getToken(GramatikaParser.TYPE_ASSING, 0); }
		public Value_typeContext value_type() {
			return getRuleContext(Value_typeContext.class,0);
		}
		public TerminalNode END_C() { return getToken(GramatikaParser.END_C, 0); }
		public TerminalNode ASSIGN() { return getToken(GramatikaParser.ASSIGN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Value_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramatikaListener ) ((GramatikaListener)listener).enterValue_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramatikaListener ) ((GramatikaListener)listener).exitValue_declaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramatikaVisitor ) return ((GramatikaVisitor<? extends T>)visitor).visitValue_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Value_declarationContext value_declaration() throws RecognitionException {
		Value_declarationContext _localctx = new Value_declarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_value_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			match(VAR);
			setState(45);
			match(ID);
			setState(46);
			match(TYPE_ASSING);
			setState(47);
			value_type();
			setState(50);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ASSIGN) {
				{
				setState(48);
				match(ASSIGN);
				setState(49);
				expr(0);
				}
			}

			setState(52);
			match(END_C);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Value_typeContext extends ParserRuleContext {
		public Token t;
		public TerminalNode INT_TYPE() { return getToken(GramatikaParser.INT_TYPE, 0); }
		public List<Array_sufixContext> array_sufix() {
			return getRuleContexts(Array_sufixContext.class);
		}
		public Array_sufixContext array_sufix(int i) {
			return getRuleContext(Array_sufixContext.class,i);
		}
		public TerminalNode BOOL_TYPE() { return getToken(GramatikaParser.BOOL_TYPE, 0); }
		public TerminalNode CHAR_TYPE() { return getToken(GramatikaParser.CHAR_TYPE, 0); }
		public TerminalNode STRING_TYPE() { return getToken(GramatikaParser.STRING_TYPE, 0); }
		public TerminalNode FLOAT_TYPE() { return getToken(GramatikaParser.FLOAT_TYPE, 0); }
		public Value_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_value_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramatikaListener ) ((GramatikaListener)listener).enterValue_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramatikaListener ) ((GramatikaListener)listener).exitValue_type(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramatikaVisitor ) return ((GramatikaVisitor<? extends T>)visitor).visitValue_type(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Value_typeContext value_type() throws RecognitionException {
		Value_typeContext _localctx = new Value_typeContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_value_type);
		int _la;
		try {
			setState(89);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT_TYPE:
				enterOuterAlt(_localctx, 1);
				{
				setState(54);
				((Value_typeContext)_localctx).t = match(INT_TYPE);
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0) {
					{
					{
					setState(55);
					array_sufix();
					}
					}
					setState(60);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case BOOL_TYPE:
				enterOuterAlt(_localctx, 2);
				{
				setState(61);
				((Value_typeContext)_localctx).t = match(BOOL_TYPE);
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0) {
					{
					{
					setState(62);
					array_sufix();
					}
					}
					setState(67);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case CHAR_TYPE:
				enterOuterAlt(_localctx, 3);
				{
				setState(68);
				((Value_typeContext)_localctx).t = match(CHAR_TYPE);
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0) {
					{
					{
					setState(69);
					array_sufix();
					}
					}
					setState(74);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case STRING_TYPE:
				enterOuterAlt(_localctx, 4);
				{
				setState(75);
				((Value_typeContext)_localctx).t = match(STRING_TYPE);
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0) {
					{
					{
					setState(76);
					array_sufix();
					}
					}
					setState(81);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case FLOAT_TYPE:
				enterOuterAlt(_localctx, 5);
				{
				setState(82);
				((Value_typeContext)_localctx).t = match(FLOAT_TYPE);
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0) {
					{
					{
					setState(83);
					array_sufix();
					}
					}
					setState(88);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Array_sufixContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Array_sufixContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_array_sufix; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramatikaListener ) ((GramatikaListener)listener).enterArray_sufix(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramatikaListener ) ((GramatikaListener)listener).exitArray_sufix(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramatikaVisitor ) return ((GramatikaVisitor<? extends T>)visitor).visitArray_sufix(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Array_sufixContext array_sufix() throws RecognitionException {
		Array_sufixContext _localctx = new Array_sufixContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_array_sufix);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(T__0);
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NUM) | (1L << FLOAT) | (1L << TRUE) | (1L << FALSE) | (1L << NOT) | (1L << ID) | (1L << SUB) | (1L << LEFT) | (1L << CHAR) | (1L << STRING))) != 0)) {
				{
				setState(92);
				expr(0);
				}
			}

			setState(95);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Func_declarationContext extends ParserRuleContext {
		public Token name;
		public Param_listContext params;
		public Value_typeContext resultType;
		public TerminalNode DEF() { return getToken(GramatikaParser.DEF, 0); }
		public TerminalNode ARROW() { return getToken(GramatikaParser.ARROW, 0); }
		public TerminalNode ASSIGN() { return getToken(GramatikaParser.ASSIGN, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode ID() { return getToken(GramatikaParser.ID, 0); }
		public Value_typeContext value_type() {
			return getRuleContext(Value_typeContext.class,0);
		}
		public Param_listContext param_list() {
			return getRuleContext(Param_listContext.class,0);
		}
		public Func_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramatikaListener ) ((GramatikaListener)listener).enterFunc_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramatikaListener ) ((GramatikaListener)listener).exitFunc_declaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramatikaVisitor ) return ((GramatikaVisitor<? extends T>)visitor).visitFunc_declaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Func_declarationContext func_declaration() throws RecognitionException {
		Func_declarationContext _localctx = new Func_declarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_func_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(DEF);
			setState(98);
			((Func_declarationContext)_localctx).name = match(ID);
			setState(100);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(99);
				((Func_declarationContext)_localctx).params = param_list();
				}
			}

			setState(102);
			match(ARROW);
			setState(103);
			((Func_declarationContext)_localctx).resultType = value_type();
			setState(104);
			match(ASSIGN);
			setState(105);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Param_listContext extends ParserRuleContext {
		public List<Param_groupContext> param_group() {
			return getRuleContexts(Param_groupContext.class);
		}
		public Param_groupContext param_group(int i) {
			return getRuleContext(Param_groupContext.class,i);
		}
		public List<TerminalNode> DELIM() { return getTokens(GramatikaParser.DELIM); }
		public TerminalNode DELIM(int i) {
			return getToken(GramatikaParser.DELIM, i);
		}
		public Param_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramatikaListener ) ((GramatikaListener)listener).enterParam_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramatikaListener ) ((GramatikaListener)listener).exitParam_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramatikaVisitor ) return ((GramatikaVisitor<? extends T>)visitor).visitParam_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Param_listContext param_list() throws RecognitionException {
		Param_listContext _localctx = new Param_listContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_param_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			param_group();
			setState(112);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DELIM) {
				{
				{
				setState(108);
				match(DELIM);
				setState(109);
				param_group();
				}
				}
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Param_groupContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(GramatikaParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(GramatikaParser.ID, i);
		}
		public TerminalNode TYPE_ASSING() { return getToken(GramatikaParser.TYPE_ASSING, 0); }
		public Value_typeContext value_type() {
			return getRuleContext(Value_typeContext.class,0);
		}
		public List<TerminalNode> DELIM() { return getTokens(GramatikaParser.DELIM); }
		public TerminalNode DELIM(int i) {
			return getToken(GramatikaParser.DELIM, i);
		}
		public Param_groupContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param_group; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramatikaListener ) ((GramatikaListener)listener).enterParam_group(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramatikaListener ) ((GramatikaListener)listener).exitParam_group(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramatikaVisitor ) return ((GramatikaVisitor<? extends T>)visitor).visitParam_group(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Param_groupContext param_group() throws RecognitionException {
		Param_groupContext _localctx = new Param_groupContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_param_group);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(ID);
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DELIM) {
				{
				{
				setState(116);
				match(DELIM);
				setState(117);
				match(ID);
				}
				}
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(123);
			match(TYPE_ASSING);
			setState(124);
			value_type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode LEFT_BR() { return getToken(GramatikaParser.LEFT_BR, 0); }
		public TerminalNode RIGHT_BR() { return getToken(GramatikaParser.RIGHT_BR, 0); }
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramatikaListener ) ((GramatikaListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramatikaListener ) ((GramatikaListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramatikaVisitor ) return ((GramatikaVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(LEFT_BR);
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << RETURN) | (1L << NUM) | (1L << FLOAT) | (1L << TRUE) | (1L << FALSE) | (1L << IF) | (1L << NOT) | (1L << FOR) | (1L << VAR) | (1L << ID) | (1L << SUB) | (1L << LEFT) | (1L << CHAR) | (1L << STRING))) != 0)) {
				{
				{
				setState(127);
				stat();
				}
				}
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(133);
			match(RIGHT_BR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
	 
		public StatContext() { }
		public void copyFrom(StatContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AssignmentContext extends StatContext {
		public TerminalNode ASSIGN() { return getToken(GramatikaParser.ASSIGN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode END_C() { return getToken(GramatikaParser.END_C, 0); }
		public TerminalNode ID() { return getToken(GramatikaParser.ID, 0); }
		public Array_idContext array_id() {
			return getRuleContext(Array_idContext.class,0);
		}
		public AssignmentContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramatikaListener ) ((GramatikaListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramatikaListener ) ((GramatikaListener)listener).exitAssignment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramatikaVisitor ) return ((GramatikaVisitor<? extends T>)visitor).visitAssignment(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ExprStatContext extends StatContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode END_C() { return getToken(GramatikaParser.END_C, 0); }
		public ExprStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramatikaListener ) ((GramatikaListener)listener).enterExprStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramatikaListener ) ((GramatikaListener)listener).exitExprStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramatikaVisitor ) return ((GramatikaVisitor<? extends T>)visitor).visitExprStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ReturnContext extends StatContext {
		public TerminalNode RETURN() { return getToken(GramatikaParser.RETURN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode END_C() { return getToken(GramatikaParser.END_C, 0); }
		public ReturnContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramatikaListener ) ((GramatikaListener)listener).enterReturn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramatikaListener ) ((GramatikaListener)listener).exitReturn(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramatikaVisitor ) return ((GramatikaVisitor<? extends T>)visitor).visitReturn(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ValueDeclarationContext extends StatContext {
		public Value_declarationContext value_declaration() {
			return getRuleContext(Value_declarationContext.class,0);
		}
		public ValueDeclarationContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramatikaListener ) ((GramatikaListener)listener).enterValueDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramatikaListener ) ((GramatikaListener)listener).exitValueDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramatikaVisitor ) return ((GramatikaVisitor<? extends T>)visitor).visitValueDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IfStatContext extends StatContext {
		public If_statementContext if_statement() {
			return getRuleContext(If_statementContext.class,0);
		}
		public IfStatContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramatikaListener ) ((GramatikaListener)listener).enterIfStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramatikaListener ) ((GramatikaListener)listener).exitIfStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramatikaVisitor ) return ((GramatikaVisitor<? extends T>)visitor).visitIfStat(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ForContext extends StatContext {
		public TerminalNode FOR() { return getToken(GramatikaParser.FOR, 0); }
		public TerminalNode LEFT() { return getToken(GramatikaParser.LEFT, 0); }
		public For_range_listContext for_range_list() {
			return getRuleContext(For_range_listContext.class,0);
		}
		public TerminalNode RIGHT() { return getToken(GramatikaParser.RIGHT, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ForContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GramatikaListener ) ((GramatikaListener)listener).enterFor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GramatikaListener ) ((GramatikaListener)listener).exitFor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GramatikaVisitor ) return ((GramatikaVisitor<? extends T>)visitor).visitFor(this);
			else return visitor.visitChildren(this);
		}
	}
